# heistDuel

./: .gitignore  Cargo.toml  README.md  ZK_DESIGN.md  cloudbuild.yaml  docker_gen_vk.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  testnet-contracts-deployment.json  tsconfig.base.json  turbo.json
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/scripts/: dev.js
apps/api/src/: app.module.ts  main.ts  snarkjs.d.ts  types.ts
apps/circuits/: README.md
apps/circuits/turn_validity/: Nargo.toml  Prover.toml  README.md
apps/circuits/turn_validity_g16/: .gitignore  README.md  package-lock.json  package.json  turn_validity.circom
apps/contracts/: README.md  package.json  tsconfig.json
apps/contracts/deployments/: testnet.json
apps/contracts/heist/: Cargo.toml  README.md  package.json
apps/contracts/scripts/: README.md  deploy.ps1  deploy.ts  init-vk.ps1  seed-deployment.ts
apps/contracts/zk-verifier/: Cargo.toml  README.md  package.json
apps/contracts/zk-verifier-core/: Cargo.toml  README.md
apps/contracts/zk-verifier-core/src/: lib.rs
apps/contracts/zk-verifier/src/: lib.rs  test.rs
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DiceRoll.tsx  GameBoard.tsx  GameBoard3D.tsx  GameCell.tsx  GameOver.tsx  LobbyWaiting.tsx  ScorePanel.tsx  TurnControls.tsx  WalletButton.tsx
apps/web/lib/: game-engine.ts  runtime-config.ts  socket-context.tsx  turn-builder.ts  use-game.ts  wallet-context.tsx
(+31 files in other folders)
