[workspace]
resolver = "2"
members = [
  "apps/contracts/heist",
  "apps/contracts/zk-verifier",
  "apps/contracts/zk-verifier-core"
]
default-members = [
  "apps/contracts/heist",
  "apps/contracts/zk-verifier"
]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = "symbols"
