[package]
name = "zk-verifier"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.1.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "25.1.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
